# SonarCore

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Agent_workflow/: __init__.py  agent.py  pipeline.py  tools.py
Api/: __init__.py  dependencies.py  main.py  repositories.py  schemas.py  services.py  utils.py
Cli/: main.py
Core/: __init__.py
Core/ASR/: MainASR.py  SherpaASR.py  WhisperASR.py  __init__.py  base.py
Core/Diarization/: PyannoteDiarization.py  __init__.py  base.py
Core/RAG_utils/: DocumentParser.py  QAIndexBuilder.py  QueryEngine.py  SummaryIndexBuilder.py  __init__.py  base.py
Core/Schemas/: __init__.py  agent_schema.py  asr_schema.py  diarization_schema.py  rag_schema.py  sherpa_schema.py
Core/Utils/: __init__.py  audio_utils.py
docs/: API.md
